# MODAQ_toolkit

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements.txt
.test/Parquet/Bag/metadata/: rosbag2_2025_04_01-15_24_10_0.summary.json
src/modaq_toolkit/: __init__.py  cli.py  message_processing.py  parser.py
test/: output.txt  test.modaq_toolkit.py
test/Bag/: metadata.yaml
test/Parquet/Bag/metadata/: rosbag2_2025_04_01-15_24_10_0.ain_fast.metadata.json  rosbag2_2025_04_01-15_24_10_0.summary.json
