[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modaq_toolkit"
description = "Toolkit for conversion and analysis of MODAQ data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["NREL", "MODAQ", "ROS", "MCAP", "Data Analysis"]
authors = [
    { name = "Andrew Simms", email = "andrew.simms@nrel.gov" },
    { name = "Rob Raye", email = "robert.raye@nrel.gov" },
    { name = "Casey Nichols", email = "casey.nichols@nrel.gov" },
    { name = "Rebecca Fao", email = "rebecca.fao@nrel.gov" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

# No core dependencies to ensure exclusive installation options
dependencies = []
dynamic = ["version"]

# Optional dependencies
[project.optional-dependencies]

# MCAP dependencies only
mcap = [
    "pandas>=2.0.0",
    "pyarrow>=19",
    "mcap>=1.0.0",
]

# TDMS dependencies only
tdms = [
    "pandas>=2.0.0",
    "pyarrow>=19.0.0",
    "npTDMS>=1.10.0",
]

# Default installation with both MCAP and TDMS support
all = [
    "pandas>=2.0.0",
    "pyarrow>=19.0.0",
    "mcap>=1.0.0",
    "npTDMS==1.10.0",
]

# Development dependencies (add to any installation option)
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.hatch.version]
path = "src/modaq_toolkit/__init__.py"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=modaq"
testpaths = [
    "tests",
]

[project.scripts]
modaq = "modaq_toolkit.cli:main"
